--- a/trunk/ phukien/GiaPhuc/Site.Master
+++ b/trunk/ phukien/GiaPhuc/Site.Master
@@ -127,6 +127,7 @@
                     <% } %>
                 </a>
             </div>
+            <div class="point-cart"><span></span></div>
         </div>
     </div>
     <div class="clear">
